healthcheck_ingress/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp-pod
spec:
  selector:
    app: webapp-pod
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
