healthcheck_ingress/ingress-app.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: minikube.local
      http:
        paths:
        - path: /
          backend:
            serviceName: helloworld-v1
            servicePort: 80
        - path: /app
          backend:
            serviceName: webapp
            servicePort: 8080
    - host: v2.minikube.local
      http:
        paths:
        - path: /
          backend:
            serviceName: helloworld-v2
            servicePort: 80
